@startuml
'https://plantuml.com/class-diagram

class JFrame {
}
class Ventana {
    - ANCHO_VENTANA : int
    - LARGO_VENTANA : int
}
Ventana --u|> JFrame
Ventana --> HiloLógicaDelJuego
HiloLógicaDelJuego --|> Thread
Thread ..|> Runnable
class Runnable {
    +run();
}
class HiloLógicaDelJuego{
    - ANCHO_LIENZO : int
    - LARGO_LIENZO : int
    - lienzoDelJuego : Canvas
}
@enduml